# prytty

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  resume.sh
inbox/: crytter-integration-spec.md  crytter-registry-done.md  hermytt-middleware-response.md  hermytt-registry.md  hermytt-wiring-ready.md
prytty-cli/: Cargo.toml
prytty-cli/src/: main.rs
prytty-cli/tests/: e2e.rs
prytty-core/: Cargo.toml
prytty-core/src/: color.rs  detect.rs  lib.rs  sanitize.rs  syntect_hl.rs  theme.rs  token.rs
prytty-core/tests/: integration.rs
prytty-formats/: Cargo.toml
prytty-formats/src/: json.rs  lib.rs
prytty-formats/tests/: integration.rs
prytty-syntax/: Cargo.toml
prytty-syntax/src/: diff.rs  generic.rs  json.rs  lib.rs  log.rs  python.rs  rust.rs  toml.rs  yaml.rs
prytty-syntax/tests/: integration.rs
prytty-wasm/src/: lib.rs
