[package]
name = "prytty"
description = "Syntax highlighting and pretty-printing for terminal output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "prytty"
path = "src/main.rs"

[dependencies]
prytty-core = { workspace = true }
prytty-syntax = { workspace = true }
prytty-formats = { workspace = true }
clap = { version = "4", features = ["derive"] }
is-terminal = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
